# bazel-kit

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: analyze.yml  cd-main.yml  ci-pr.yml  cleanup-preview.yml  promote-prod.yml
docs/: changelog.md  copyright.md  devx.md  migrate.md  modelgen.md  pipeline.md  protobuf.md  quality.md  web.md  wire.md  workspace.md
examples/changelog/: BUILD.bazel
examples/copyright/: BUILD.bazel  demo.go
examples/devx/: BUILD.bazel  ok_test.go
examples/migrate/: BUILD.bazel
examples/migrate/migrations/: 0001_init.down.sql  0001_init.up.sql
examples/modelgen/: BUILD.bazel  README.md  launcher_smoke_test.sh  override.yaml
examples/pipeline/monorepo/: BUILD.bazel  README.md  ok_test.go  pipeline.json
examples/pipeline/monorepo/argo/: applicationsets.yaml
examples/pipeline/monorepo/components/contracts/: README.md
examples/pipeline/monorepo/deploy/api/: values.preview.yaml
examples/pipeline/monorepo/deploy/api/templates/: deployment.yaml
examples/pipeline/monorepo/deploy/web/: values.yaml
examples/pipeline/monorepo/deploy/web/templates/: deployment.yaml
examples/pipeline/monorepo/deploy/worker/: values.yaml
examples/pipeline/monorepo/deploy/worker/templates/: deployment.yaml
examples/pipeline/monorepo/scripts/: image_runner.sh  ok_test.sh
examples/pipeline/monorepo/services/web/src/: main.ts
examples/pipeline/monorepo/services/worker/: run.sh
examples/pipeline/monorepo/shared/contracts/: api.schema.json
examples/protobuf/: BUILD.bazel  README.md  against.binpb  buf.gen.codesjoy_event.yaml  buf.gen.codesjoy_reason.yaml  buf.gen.google_aip.yaml  buf.gen.yaml  buf.yaml  runtime_integration_test.sh
examples/protobuf/plugins/: protoc-gen-example
examples/protobuf/proto/: BUILD.bazel
examples/protobuf/proto/acme/weather/v1/: BUILD.bazel  weather.proto
examples/protobuf/proto/codesjoy/example/order/v1/: order.proto
examples/protobuf/proto/codesjoy/example/user/v1/: reason.proto
examples/protobuf/templates/: buf.gen.go.yaml  buf.gen.java.yaml  buf.gen.ts.yaml
examples/quality/go/: .golangci.yaml  BUILD.bazel  go.mod  main.go
examples/quality/shell/: BUILD.bazel  demo.sh
examples/quality/web/: BUILD.bazel  index.html
examples/quality/web/src/: main.ts  style.css
examples/web/vite/: BUILD.bazel  biome.json  index.html  package.json  playwright.config.ts  tsconfig.json
examples/web/vite/e2e/: app.spec.ts
examples/web/vite/src/: counter.ts  main.ts  style.css
examples/web/vite/tests/: counter.test.ts
examples/wire/: BUILD.bazel  go.mod
examples/wire/cmd/server/: provider.go  wire.go
examples/workspace/: BUILD.bazel  go.work  noop_gazelle.sh
rules/changelog/: defs.bzl  extensions.bzl
rules/changelog/private/: BUILD.bazel  launcher.bzl  launcher_test.go
rules/copyright/: defs.bzl  extensions.bzl
rules/copyright/private/: BUILD.bazel  launcher.bzl  launcher_test.go
rules/devx/: defs.bzl
rules/devx/private/: BUILD.bazel  launcher.bzl  launcher_test.go
rules/migrate/: defs.bzl  extensions.bzl
rules/migrate/private/: BUILD.bazel  launcher.bzl  launcher_test.go
rules/modelgen/: defs.bzl  extensions.bzl
rules/modelgen/private/: BUILD.bazel  launcher.bzl  runner_text_test.sh
rules/pipeline/: defs.bzl  extensions.bzl
rules/pipeline/private/: BUILD.bazel  launcher.bzl  ok_test.go  plan_main.py  plan_smoke_test.go  plan_smoke_test.sh  render_main.py  render_smoke_test.go  render_smoke_test.sh  runner_text_test.go  runner_text_test.sh
rules/pipeline/private/testdata/: fake_bazel.sh  global-impact.txt  helm  noop_runner.sh
rules/pipeline/private/testdata/charts/api/: values.yaml
rules/pipeline/private/testdata/charts/api/templates/: deployment.yaml
rules/pipeline/private/testdata/charts/web/: values.yaml
rules/pipeline/private/testdata/charts/web/templates/: deployment.yaml
rules/pipeline/private/testdata/charts/worker/: values.yaml
rules/pipeline/private/testdata/charts/worker/templates/: deployment.yaml
rules/pipeline/private/testdata/global/: README.md
rules/pipeline/private/testdata/services/web/src/: main.ts
rules/pipeline/private/testdata/services/worker/: run.sh
rules/pipeline/private/testdata/shared/contracts/: schema.json
rules/protobuf/: BUILD.bazel  buf.bzl  extensions.bzl
rules/protobuf/private/: BUILD.bazel  launcher.bzl  runner_text_test.sh
rules/quality/: BUILD.bazel  extensions.bzl  go.bzl  shell.bzl  web.bzl
rules/quality/private/: BUILD.bazel  go_launcher.bzl  go_runner_text_test.sh  launcher_test.go  shell_launcher.bzl  shell_runner_text_test.sh  web_launcher.bzl  web_runner_text_test.sh
rules/web/: defs.bzl  extensions.bzl
rules/web/private/: BUILD.bazel  init_integration_test.sh  launcher.bzl  runner_text_test.sh  smoke_test.sh
rules/web/private/testdata/: node
rules/wire/: defs.bzl  extensions.bzl
rules/wire/private/: BUILD.bazel  launcher.bzl  launcher_test.go
rules/workspace/: BUILD.bazel  defs.bzl
rules/workspace/private/: BUILD.bazel  launcher.bzl  launcher_test.go  runner_text_test.sh
scripts/: BUILD.bazel  gitops_scripts_test.go  invoke_image_target_test.go  pipeline_test_helpers_test.go  render_to_gitops_test.go
scripts/pipeline/: cleanup_gitops.py  cleanup_gitops.sh  gitops_commit.py  gitops_commit.sh  invoke_image_target.py  render_to_gitops.py
tools/changelog/: repositories.bzl  text_test.go  versions.bzl
tools/copyright/: repositories.bzl  text_test.go  versions.bzl
tools/migrate/: repositories.bzl  text_test.go  versions.bzl
tools/modelgen/: repositories.bzl  text_test.sh  versions.bzl
tools/pipeline/helm/: repositories.bzl  (+2 more)
tools/protobuf/: repositories.bzl  text_test.sh  versions.bzl
tools/quality/go/: BUILD.bazel  repositories.bzl  text_test.sh  versions.bzl
tools/shared/: BUILD.bazel  go_source_tool_repository.bzl  helpers.bzl
tools/source_runner/: BUILD.bazel  changelog.go  common.go  copyright.go  devx.go  main.go  migrate.go  python_launch.go  shell.go  wire.go  workspace.go
tools/wire/: BUILD.bazel  repositories.bzl  text_test.go  versions.bzl
(+13 files in other folders)
