module(
    name = "codesjoy_bazel_kit",
    version = "0.2.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.8")

quality_tools = use_extension("//rules/quality:extensions.bzl", "quality_tools")
quality_tools.install(domains = ["go", "shell", "web"])

web_tools = use_extension("//rules/web:extensions.bzl", "web_tools")
web_tools.install()

protobuf_tools = use_extension("//rules/protobuf:extensions.bzl", "protobuf_tools")
protobuf_tools.install(
    plugins = [
        "codesjoy_event",
        "codesjoy_reason",
        "google_aip",
    ],
)

modelgen_tools = use_extension("//rules/modelgen:extensions.bzl", "modelgen_tools")
modelgen_tools.install()

use_repo(
    quality_tools,
    "quality_tool_biome",
    "quality_tool_gofumpt",
    "quality_tool_goimports",
    "quality_tool_golangci_lint",
    "quality_tool_golines",
    "quality_tool_shellcheck",
    "quality_tool_shfmt",
)

use_repo(
    web_tools,
    "web_tool_node",
    "web_tool_pnpm",
)

use_repo(
    protobuf_tools,
    "protobuf_tool_buf",
    "protobuf_tool_protoc_gen_codesjoy_event",
    "protobuf_tool_protoc_gen_codesjoy_reason",
    "protobuf_tool_protoc_gen_google_aip",
)

use_repo(
    modelgen_tools,
    "modelgen_tool_codesjoy_modelgen",
)
