module(
    name = "codesjoy_bazel_kit",
    version = "0.2.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_buf", version = "0.5.2")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.8")

quality_tools = use_extension("//rules/quality:extensions.bzl", "quality_tools")
quality_tools.install(domains = [
    "go",
    "shell",
    "web",
])

web_tools = use_extension("//rules/web:extensions.bzl", "web_tools")
web_tools.install()

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(
    sha256 = "1b37b75dc0a777a0cba17fa2604bc9906e55bb4c578823d8b7a8fe3fc9fe4439",
    version = "v1.47.2",
)

modelgen_tools = use_extension("//rules/modelgen:extensions.bzl", "modelgen_tools")
modelgen_tools.install()

pipeline_tools = use_extension("//rules/pipeline:extensions.bzl", "pipeline_tools")
pipeline_tools.install()

wire_tools = use_extension("//rules/wire:extensions.bzl", "wire_tools")
wire_tools.install()

migrate_tools = use_extension("//rules/migrate:extensions.bzl", "migrate_tools")
migrate_tools.install()

changelog_tools = use_extension("//rules/changelog:extensions.bzl", "changelog_tools")
changelog_tools.install()

copyright_tools = use_extension("//rules/copyright:extensions.bzl", "copyright_tools")
copyright_tools.install()

use_repo(
    quality_tools,
    "quality_tool_biome",
    "quality_tool_gofumpt",
    "quality_tool_goimports",
    "quality_tool_golangci_lint",
    "quality_tool_golines",
    "quality_tool_shellcheck",
    "quality_tool_shfmt",
)

use_repo(
    web_tools,
    "web_tool_node",
    "web_tool_pnpm",
)

use_repo(buf, "rules_buf_toolchains")

register_toolchains("@rules_buf_toolchains//:all")

use_repo(
    modelgen_tools,
    "modelgen_tool_codesjoy_modelgen",
)

use_repo(
    pipeline_tools,
    "pipeline_tool_helm",
)

use_repo(
    wire_tools,
    "wire_tool_wire",
)

use_repo(
    migrate_tools,
    "migrate_tool_migrate",
)

use_repo(
    changelog_tools,
    "changelog_tool_git_chglog",
)

use_repo(
    copyright_tools,
    "copyright_tool_addlicense",
)
