load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_buf//buf:defs.bzl", "buf_format")

package(default_visibility = ["//visibility:public"])

exports_files([
    "against.binpb",
    "buf.yaml",
])

# gazelle:buf_breaking_against //examples/protobuf:against.binpb

gazelle_binary(
    name = "gazelle_buf",
    languages = [
        "@bazel_gazelle//language/proto:go_default_library",
        "@rules_buf//gazelle/buf:buf",
    ],
)

gazelle(
    name = "gazelle",
    args = ["examples/protobuf"],
    gazelle = ":gazelle_buf",
)

buf_format(
    name = "buf_format",
)
