load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//rules/workspace:defs.bzl", "workspace_sync")

package(default_visibility = ["//visibility:public"])

exports_files(["go.work"])

sh_binary(
    name = "noop_gazelle",
    srcs = ["noop_gazelle.sh"],
)

workspace_sync(
    name = "sync",
    modules = ["//examples/quality/go:go.mod"],
    go_work = ":go.work",
    gazelle_target = ":noop_gazelle",
    run_bazel_mod_tidy = False,
)
