load("@rules_go//go:def.bzl", "go_binary")
load("//rules/workspace:defs.bzl", "workspace_sync")

package(default_visibility = ["//visibility:public"])

exports_files(["go.work"])

go_binary(
    name = "noop_gazelle",
    embed = ["//tools/testhelpers/fakecmd:fakecmd_lib"],
)

workspace_sync(
    name = "sync",
    modules = ["//examples/quality/go:go.mod"],
    go_work = ":go.work",
    gazelle_target = ":noop_gazelle",
    run_bazel_mod_tidy = False,
)
