load("//rules/quality:web.bzl", "web_fmt", "web_fmt_check", "web_lint")
load("//rules/web:defs.bzl", "web_browser_install", "web_build", "web_dev", "web_e2e", "web_install", "web_preview", "web_test", "web_typecheck")

package(default_visibility = ["//visibility:public"])

exports_files([
    "biome.json",
    "package.json",
    "playwright.config.ts",
    "pnpm-lock.yaml",
    "tsconfig.json",
    "vite.config.ts",
    "vitest.config.ts",
])

web_fmt(
    name = "fmt",
    project_dir = "examples/web/vite",
)

web_fmt_check(
    name = "fmt_check",
    project_dir = "examples/web/vite",
)

web_lint(
    name = "lint",
    project_dir = "examples/web/vite",
)

web_install(
    name = "install",
    project_dir = "examples/web/vite",
)

web_dev(
    name = "dev",
    project_dir = "examples/web/vite",
)

web_build(
    name = "build",
    project_dir = "examples/web/vite",
)

web_preview(
    name = "preview",
    project_dir = "examples/web/vite",
)

web_typecheck(
    name = "typecheck",
    project_dir = "examples/web/vite",
)

web_test(
    name = "test",
    project_dir = "examples/web/vite",
)

web_browser_install(
    name = "browser_install",
    project_dir = "examples/web/vite",
)

web_e2e(
    name = "e2e",
    project_dir = "examples/web/vite",
)
